kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        homework: "true"
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: workdir
          mountPath: /homework
        - name: "nginx-config"
          mountPath: /etc/nginx/conf.d/webserver_8000.conf
          subPath: webserver_8000.conf
        - name: cm-webserver
          mountPath: /homework/conf/file
          subPath: file
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","rm -f /homework/index.html"]
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3

      volumes:
      - name: workdir
        persistentVolumeClaim:
          claimName: pvc-webserver
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: cm-webserver
        configMap:
          name: cm-webserver

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
